k8sb44/k8s-mypractice/ingress/ingressrule.yml
apiVersion:  networking.k8s.io/v1 
kind: Ingress
metadata:
        name: ingress
        annotations:
             nginx.ingress.kubernetes.io/rewrite-target: /
spec:     
    ingressClassName: nginx
    rules:
      - host: ae638bec479454c6996ceeb2f7253568-1232585869.ap-south-1.elb.amazonaws.com  
        http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                  name: npci
                  port:
                      number: 80
          - path: /tomcat
            pathType: Prefix
            backend:
              service:
                  name: tcci
                  port:
                      number: 8080
